# nearness

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  LICENSE.txt  README.md  Taskfile.yml  env.yml  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  release-drafter.yml  system_info.py
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  documentation.yml  feature.yml
.github/workflows/: check.yml  release-drafter.yml  release.yml  setup.yml  stale.yml
src/nearness/: __init__.py  _annoy.py  _autofaiss.py  _base.py  _config.py  _faiss.py  _hnsw.py  _jax.py  _numpy.py  _scann.py  _scipy.py  _sklearn.py  _torch.py  _usearch.py
src/nearness/_base/: __init__.py  _config.py  _experimental.py  _helpers.py  _neighbors.py
tests/: test_benchmark.py  test_nearness.py  utilities.py
